# backend/docs/swagger.json
@@ -66,7 +66,15 @@
     },
     "definitions": {
         "handlers.AudioTranscriptionRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "pcm_data": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
         },
         "handlers.ErrorResponse": {
             "type": "object",
